finished overlay/ljoin logo align and design - fixed "main" > put together

--- a/style/login.css
+++ b/style/login.css
@@ -3,30 +3,50 @@ body {
     font-family: 'Inter', sans-serif;
 }
 
+/* animation overlay design and align */
 .overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
+    position: absolute;
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    animation: backgroundBlendOut 1.5s forwards;
-    z-index: 9999;
+    background-color: rgba(255, 255, 255, 1);
+    animation: backgroundBlendOut 1s ease-in forwards;
+    z-index: 1;
 }
 
-.overlay .join_logo {
+/* animation join logo design and align */
+.overlay .animation_join_logo {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
-    animation: slideMidToLeft 1.5s forwards;
+    animation: slideMidToLeft 1s forwards;
+    animation-timing-function: cubic-bezier(.50,0,0,0);
 }
 
+/* main design and align / basic background */
 main {
-    background-color: #F6F7F8;
+    height: 100vh;
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
+    background-color: #F6F7F8;
+}
+
+/* join logo header left top design */
+.join_logo {
+    width: 109px;
+    height: 134px;
+    position: absolute;
+    top: 67px;
+    left: 5%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
 }
 
 /* sign up header top right */
@@ -70,14 +90,6 @@ main {
     box-shadow: 0px 4px 4px 0px #00000040;
 }
 
-/* main design and align / basic background */
-main {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 /* login section align and structure */
 .login_section {
     background-color: #ffffff;
@@ -99,7 +111,6 @@ main {
     gap: 16px;
 }
 
-
 /* login section header h1 style */
 .login_section header h1 {
     margin: 0;
@@ -107,7 +118,6 @@ main {
     font-style: bold;
     font-size: 61px;
 }
-
 
 /* login section input group style */
 .login_section .input_group {
